force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the exceptions that are thrown from custom components of elixir.</description>
    <label>Exception log</label>
    <nameField>
        <label>Exception Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>