force-app/main/default/objects/Exception_Log__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>Indicates the status of integration in the Salesforce Exception log, providing information on whether the integration was successful, failed, or encountered issues.</description>
    <label>Integration Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>