force-app/main/default/objects/Exception_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Represents the line number associated with the exception in the log, aiding in pinpointing the location or source of the issue.</description>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>