force-app/main/default/objects/Exception_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Captures a descriptive message explaining the nature of the exception or error that occurred.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>