force-app/main/default/objects/Exception_Log__c/fields/Stack_Trace_Long__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace_Long__c</fullName>
    <description>Contains a detailed and extended version of the stack trace, offering a comprehensive view of the call hierarchy leading to the exception.</description>
    <label>Stack Trace Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>