force-app/main/default/objects/Exception_Log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>This field is used to track the class name and method name which are throwing the exception.</description>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>